--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "jpa",
+  "name": "pesima",
+  "description": "Static HTML builder for faster and easier web development.",
   "version": "0.1.0",
   "author": "Hariadi Hinta <diperakui@gmail.com>",
   "homepage": "http://www.hariadi.org",
   "repository": {
     "type": "git",
-    "url": "git://github.com/hariadi/jpa.git"
+    "url": "git://github.com/hariadi/pesima.git"
   },
   "bugs": {
-    "url": "https://github.com/hariadi/jpa/issues"
+    "url": "https://github.com/hariadi/pesima/issues"
   },
   "licenses": [
     {
-      "type": "MIT",
-      "url": "http://opensource.org/licenses/MIT"
+      "type": "Apache-2.0",
+      "url": "http://www.apache.org/licenses/LICENSE-2.0"
     }
   ],
   "engines": {
@@ -23,6 +24,7 @@
     "grunt": "~0.4.0",
     "grunt-contrib-clean": "~0.4.0",
     "grunt-contrib-jshint": "~0.1.1",
+    "grunt-contrib-concat": "~0.1.3",
     "grunt-contrib-uglify": "~0.1.1",
     "grunt-contrib-watch": "~0.2.0",
     "grunt-recess": "~0.3.1"
