--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "pesima",
+  "name": "statik",
   "description": "Static HTML builder for faster and easier web development.",
   "version": "0.1.0",
   "author": "Hariadi Hinta <diperakui@gmail.com>",
   "homepage": "http://www.hariadi.org",
   "repository": {
     "type": "git",
-    "url": "git://github.com/hariadi/pesima.git"
+    "url": "git://github.com/pesima/statik.git"
   },
   "bugs": {
-    "url": "https://github.com/hariadi/pesima/issues"
+    "url": "https://github.com/pesima/statik/issues"
   },
   "licenses": [
     {
