--- a/package.json
+++ b/package.json
@@ -1,32 +1,43 @@
 {
   "name": "statik",
-  "description": "Static HTML builder for faster and easier web development.",
-  "version": "0.1.0",
-  "author": "Hariadi Hinta <diperakui@gmail.com>",
-  "homepage": "http://www.hariadi.org",
+  "description": "PESIMA static web boilerplate with Assemble",
+  "version": "0.0.1",
+  "homepage": "https://github.com/pesima/statik",
+  "author": {
+    "name": "PESIMA",
+    "url": "https://github.com/pesima/pesima"
+  },
   "repository": {
     "type": "git",
-    "url": "git://github.com/pesima/statik.git"
+    "url": "https://github.com/pesima/statik.git"
   },
   "bugs": {
     "url": "https://github.com/pesima/statik/issues"
   },
-  "licenses": [
-    {
-      "type": "Apache-2.0",
-      "url": "http://www.apache.org/licenses/LICENSE-2.0"
-    }
-  ],
   "engines": {
-    "node": ">= 0.8.0"
+    "node": ">=0.8"
+  },
+  "scripts": {
+    "test": "grunt assemble"
   },
   "devDependencies": {
-    "grunt": "~0.4.0",
-    "grunt-contrib-clean": "~0.4.0",
-    "grunt-contrib-jshint": "~0.1.1",
-    "grunt-contrib-concat": "~0.1.3",
-    "grunt-contrib-uglify": "~0.1.1",
-    "grunt-contrib-watch": "~0.2.0",
-    "grunt-recess": "~0.3.1"
-  }
+    "grunt": "~0.4.1",
+    "grunt-contrib-clean": "~0.5.0",
+    "assemble": "~0.4.2"
+  },
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/pesima/statik/blob/master/LICENSE-MIT"
+    }
+  ],
+  "keywords": [
+    "assemble example",
+    "assemble",
+    "templates",
+    "handlebars",
+    "site generator",
+    "site builder",
+    "grunt"
+  ]
 }
