--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
-# Include your project-specific ignores in this file
-# Read about how to use .gitignore: https://help.github.com/articles/ignoring-files
-.gitignore
 node_modules
-dist
+npm-debug.log
+vendor
 tmp
-src/
-
+*.sublime-project
+*.sublime-workspace
